fix reponsive for mobile (row-gap)

--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -115,8 +115,11 @@ app-letter {
 
 @media (max-width: 640px) {
   .boxPage {
-    justify-content: baseline;
-    row-gap: 1vh;
+    height: 90vh;
+    padding-top: 10vh;
+    display: flex;
+    justify-content: start;
+    row-gap: 7vh;
   }
 }
 
